--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,13 @@ dependencies:
 
   fluro: ^1.7.8
 
+  # photo_album_manager: ^1.1.9
+  photo_manager: ^0.5.8
+
+  fluttertoast: ^7.1.6
+
+  sticky_infinite_list: ^3.0.1
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
